Source/main/default/objects/Feedback__c/fields/Customer_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>