Source/main/default/objects/Feedback__c/fields/Feedback_Message__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Message__c</fullName>
    <label>Feedback Message</label>
    <type>TextArea</type>
</CustomField>