Source/main/default/objects/Feedback__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Hosting</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Game Development</fullName>
            </value>
            <value>
                <fullName>Software Development</fullName>
            </value>
            <value>
                <fullName>Mobile App Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>