Source/main/default/objects/Feedback__c/fields/Service_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Service_Subcategory__c</fullName>
    <label>Service Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WordPress</fullName>
            </value>
            <value>
                <fullName>WooCommerce</fullName>
            </value>
            <value>
                <fullName>CMS Hosting</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Harmony OS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>